# plonky2-verifier

./: Cargo.toml  README.md  generate_benches.sh
.github/: CONTRIBUTING.md
.github/workflows/: docs.yml  rust.yml
examples/: dummy.rs
src/: config.rs  deserializer.rs  lib.rs  proof.rs  validate.rs  vk.rs
src/deserializer/: custom.rs  mod.rs
tests/: artifacts_generator.rs  integration.rs
tests/artifacts/: proof.json  proof_compressed.json  vk.json
